<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SloAliments</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblProduit">Produits</string>
    <string name="lblStock">Stock</string>
    <string name="lblProduitAjouter">Ajouter</string>
    <string name="lblProduitModifier">Modifier</string>
    <string name="lblStockEntree">Entrée</string>
    <string name="lblStockSortie">Sortie</string>
    <string name="title_activity_produit_ajouter">Nouveau produit</string>
    <string name="lblProduitCode">Code</string>
    <string name="txtHintProduitCode">Code du produit</string>
    <string name="txtHintProduitLibelle">Libellé du produit</string>
    <string name="txtHintProduitStockMini">Stock minimum du produit</string>
    <string name="txtHintProduitStockEnCours">Stock en cours du produit</string>
    <string name="btnEnregistrer">Enregistrer</string>
    <string name="btnAnnuler">Annuler</string>
    <string name="msgAnnule">Annulé.</string>
    <string name="msgEnregistre">Enregistré.</string>
    <string name="title_activity_produit_liste_activite">Liste des produits</string>

</resources>
